# gepa-mutations

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  runs
CLAUDE/: cluster_infrastructure.md  known_bugs_and_fixes.md  mac_setup.md  monitoring.md  sweep_execution.md
analysis/: plot_convergence_detail.py  visualize_results.py
configs/: default.py  full.yaml  pilot.yaml  pilot_phase_a.yaml  pilot_phase_b.yaml
diagrams/: contrastive-reflection.excalidraw  gepa-baseline.excalidraw  gepa_contrastive_tree.excalidraw  gepa_evolution_tree.excalidraw  gepa_slime_mold_tree.excalidraw  gepa_slime_mold_tree.py  gepa_synaptic_pruning_tree.excalidraw  gepa_tournament_tree.excalidraw  slime-mold.excalidraw  synaptic-pruning.excalidraw  tournament.excalidraw
docs/: aws-deployment-plan.md  design_decisions.md  ideas.md  issues.md  mutations_analysis.md  runpod.md  selection_report.md
docs/archive/: gcp-qwen3-8b-self-hosting.md  gcp-self-hosting-cost-analysis.md  raycluster-integration-synthesis.md
docs/infrastructure/: aws-qwen3-8b-self-hosting.md  cluster-guide.md  self-hosting-cost-analysis.md
docs/iso-experiment/: README.md  TROUBLESHOOTING.md
docs/methods/: best_of_k_aws_implementation.md  contrastive_reflection_aws_implementation.md  failure_stratified_k_aws_implementation.md  failure_stratified_k_mutation_plan.md
docs/scalpel/: SCALPEL.md
experiments/01-slurm-sweep-2026-03/: README.md
experiments/02-runpod-baseline-2026-04/: README.md
experiments/03-inductive-discovery-2026-04/: README.md
experiments/04-pilot-gepa-comparison-2026-04/: README.md  analyze.py  run_pilot.sh
gepa-best-of-k/: pyproject.toml
gepa-best-of-k/best_of_k/: __init__.py  callbacks.py  proposer.py  runner.py  sweep.py
gepa-best-of-k/docs/: mutation_plan.md
gepa-contrastive-reflection/: pyproject.toml
gepa-contrastive-reflection/contrastive_reflection/: __init__.py  callbacks.py  contrastive_search.py  injection.py  proposer.py  runner.py
gepa-contrastive-reflection/docs/: mutation_plan.md
gepa-failure-stratified-k/: pyproject.toml
gepa-failure-stratified-k/failure_stratified_k/: __init__.py  proposer.py  runner.py
ideas/: experiment-design.md  inductive-strategy-discovery.md  larger-slime-mold-pool.md  strategy-aware-mutations.md
logs/: .status_snapshot.json
methods/active_minibatch/: pyproject.toml
methods/active_minibatch/active_minibatch/: __init__.py  callbacks.py  runner.py  sampler.py
methods/ant_colony/: pyproject.toml
methods/ant_colony/ant_colony/: __init__.py  colony.py  components.py  runner.py
methods/capo/: ADAPTATION_NOTES.md
methods/contrastive_synthesis/: pyproject.toml
methods/contrastive_synthesis/contrastive_synthesis/: __init__.py  callbacks.py  proposer.py  runner.py  synthesizer.py
methods/ecological_succession/: pyproject.toml
methods/ecological_succession/ecological_succession/: __init__.py  difficulty.py  runner.py
methods/iso/: pyproject.toml
methods/miprov2/: pyproject.toml
methods/miprov2/miprov2/: __init__.py  runner.py
methods/modular/: pyproject.toml
methods/modular/modular/: __init__.py  composer.py  decomposer.py  runner.py
methods/random_search/: pyproject.toml
methods/random_search/random_search/: __init__.py  runner.py
methods/slime_mold/: pyproject.toml
methods/slime_mold/slime_mold/: __init__.py  colony.py  naming.py  runner.py
methods/synaptic_pruning/: pyproject.toml
methods/synaptic_pruning/synaptic_pruning/: __init__.py  pruner.py  runner.py
methods/tournament/: pyproject.toml
methods/tournament/tournament/: __init__.py  bracket.py  runner.py
scripts/: analyze_smoke_test.py  aws_setup.py  check_health.py  check_node_recovery.sh  download_results.py  emergency_cleanup.py  iso_download_models.sh  iso_health_check.sh  iso_run_full.sh  iso_run_pilot.sh  iso_setup.sh  iso_start_servers.sh  iso_sync_from_pod.sh  iso_validate_system.sh  launch_experiment.py  launch_mac_sweep.sh  live_dashboard.py  local_validation_run.py  monitor_multi_model.py  orchestrate_experiments.py  plot_learning_curves.py  preflight_a40_throughput.sh  preflight_adaptive_k_probe.py  preflight_discovery_quality.py  run_all_local.py  run_all_smoke_tests.sh  run_baseline.py  run_experiment.py  run_meta_pilot.sh  runpod_pod_a.sh  runpod_pod_a40.sh  runpod_pod_b.sh  runpod_progress.sh  runpod_start.sh  serve_mlx_0.6b_mac.sh  serve_mlx_1b_mac.sh  serve_mlx_32b_mac.sh  serve_mlx_4b_mac.sh  serve_mlx_gemma3_12b_mac.sh  serve_mlx_gemma3_1b_mac.sh  (+19 more)
scripts/archive/: rescue_synaptic_results.sh
scripts/raycluster/: README.md  config.py  deploy.sh  run_baseline.py  run_gepa.py  run_iso.py  run_remote.sh  run_scalpel.py  run_stamp_v2_benchmark.py  test_connectivity.py  test_stamp_v2.py
src/gepa_mutations/: __init__.py  base.py  cli.py  config.py  cost_model.py
src/iso_harness/: __init__.py
src/scalpel/: __init__.py  checkpoint.py  compile.py  optimizer.py
tests/: conftest.py  test_adapter_scoring.py  test_cost_model.py  test_derive_method_name.py  test_discovery_parser.py  test_donor_selection.py  test_eval_timeout_regression.py  test_failure_matrix.py  test_gepa_stall_detection.py  test_hard_examples.py  test_miprov2_smoke.py  test_model_tag.py  test_pareto_complexity.py  test_parquet_logger.py  test_raycluster_connectivity.py  test_runs_dir_routing.py  test_timeout_regression.py  test_trajectory_point.py
tests/mocks/: __init__.py  mock_lm.py
tests/scalpel/: conftest.py  test_benchmark_adapter.py  test_clustering.py  test_edits.py  test_lesson_book.py  test_llm_client.py  test_optimizer_integration.py  test_racing.py  test_reflection.py  test_smoke_live.py  test_surrogate.py
tests/unit/: test_checkpoint_unit.py  test_config.py  test_consolidate.py  test_entry_point.py  test_iso_data_structures.py  test_iso_feedback_adapter.py  test_iso_helpers.py  test_iso_parsing.py  test_iso_runtime.py  test_jsonl_writer.py  test_logging_lm.py  test_mlflow_setup.py  test_monitor.py  test_orchestrator.py  test_pilot_config.py  test_reporter.py  test_schemas.py
tests/validation/: conftest.py  test_dspy.py  (+16 more)
(+63745 files in other folders)
