[project]
name = "gepa-mutations"
version = "0.1.0"
description = "Experimental framework for testing and mutating the GEPA prompt evolution framework"
requires-python = ">=3.12,<3.15"
dependencies = [
    "gepa[full]",
    "dspy",
    "boto3",
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "typer",
    "rich",
    "python-telegram-bot",
    "pydantic-settings",
    "gepa-best-of-k",
    "gepa-contrastive-reflection",
    "gepa-failure-stratified-k",
    "gepa-synaptic-pruning",
    "gepa-tournament",
    "gepa-slime-mold",
    "gepa-ant-colony",
    "gepa-active-minibatch",
    "gepa-contrastive-synthesis",
    "gepa-ecological-succession",
    "gepa-modular",
]

[project.scripts]
gepa-mutations = "gepa_mutations.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gepa_mutations"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.uv]
# Exclude submodule and method packages from workspace discovery
workspace = { exclude = ["gepa", "methods/best_of_k", "methods/contrastive_reflection", "methods/failure_stratified_k", "methods/synaptic_pruning", "methods/tournament", "methods/slime_mold", "methods/ant_colony", "methods/active_minibatch", "methods/contrastive_synthesis", "methods/ecological_succession", "methods/modular"] }

[tool.uv.sources]
gepa = { path = "./gepa", editable = true }
gepa-best-of-k = { path = "./methods/best_of_k", editable = true }
gepa-contrastive-reflection = { path = "./methods/contrastive_reflection", editable = true }
gepa-failure-stratified-k = { path = "./methods/failure_stratified_k", editable = true }
gepa-synaptic-pruning = { path = "./methods/synaptic_pruning", editable = true }
gepa-tournament = { path = "./methods/tournament", editable = true }
gepa-slime-mold = { path = "./methods/slime_mold", editable = true }
gepa-ant-colony = { path = "./methods/ant_colony", editable = true }
gepa-active-minibatch = { path = "./methods/active_minibatch", editable = true }
gepa-contrastive-synthesis = { path = "./methods/contrastive_synthesis", editable = true }
gepa-ecological-succession = { path = "./methods/ecological_succession", editable = true }
gepa-modular = { path = "./methods/modular", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
