[project]
name = "gepa-best-of-k"
version = "0.1.0"
description = "best_of_k mutation: generate K mutations per iteration, keep the best"
requires-python = ">=3.12"
dependencies = ["gepa-mutations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["best_of_k"]
