[project]
name = "gepa-contrastive-reflection"
version = "0.1.0"
description = "contrastive_reflection mutation: inject successful candidate snippets into reflection"
requires-python = ">=3.12"
dependencies = ["gepa-mutations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contrastive_reflection"]
