[project]
name = "gepa-ant-colony"
version = "0.1.0"
description = "ACPCO: Ant Colony Prompt Component Optimization for prompt search"
requires-python = ">=3.12"
dependencies = ["gepa-mutations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ant_colony"]
