[project]
name = "gepa-contrastive-synthesis"
version = "0.1.0"
description = "contrastive_synthesis mutation: distills contrastive pairs into abstract principles via synthesis"
requires-python = ">=3.12"
dependencies = ["gepa-mutations", "gepa-contrastive-reflection"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contrastive_synthesis"]
