[project]
name = "gepa-ecological-succession"
version = "0.1.0"
description = "ESO: Ecological Succession Optimization — progressive difficulty curriculum for prompt optimization"
requires-python = ">=3.12"
dependencies = ["gepa-mutations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ecological_succession"]
