[project]
name = "gepa-miprov2"
version = "0.1.0"
description = "MIPROv2 wrapper: DSPy Bayesian instruction optimizer matching unified CLI contract"
requires-python = ">=3.12"
dependencies = ["gepa-mutations", "dspy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["miprov2"]
