[project]
name = "gepa-modular"
version = "0.1.0"
description = "PDMO: Prompt Decomposition and Modular Optimization — decompose prompts into independent modules and optimize each sequentially"
requires-python = ">=3.12"
dependencies = ["gepa-mutations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modular"]
