[project]
name = "gepa-random-search"
version = "0.1.0"
description = "Random search baseline: sample N prompts, evaluate, return best"
requires-python = ">=3.12"
dependencies = ["gepa-mutations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["random_search"]
