[project]
name = "gepa-slime-mold"
version = "0.1.0"
description = "SMNO: Slime Mold Network Optimization for prompt search via progressive pruning"
requires-python = ">=3.12"
dependencies = ["gepa-mutations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slime_mold"]
