[project]
name = "gepa-synaptic-pruning"
version = "0.1.0"
description = "Synaptic pruning prompt optimization"
requires-python = ">=3.12"
dependencies = ["gepa-mutations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["synaptic_pruning"]
