[project]
name = "gepa-tournament"
version = "0.1.0"
description = "Tournament selection prompt optimization (PTS)"
requires-python = ">=3.12"
dependencies = ["gepa-mutations"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tournament"]
